--- a/django_startproject/project_template/myproject/templates/base.html
+++ b/django_startproject/project_template/myproject/templates/base.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
+{% load static %}
+<!DOCTYPE html>
 <html>
 <head>
     <title>{% block head_title %}{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
 	<!-- FAVICON -->
-	<link rel="icon" type="image/gif" href="https://lh3.googleusercontent.com/lOoRs3eOglC-DGT3dqB0X6fosUc6ImmuxCUU7rLw1VPi_m4IFFoahvaDyQulg2LHGSYrACiYWuLR_A3IjtpEnsr5hcrCSgWTfIbIevDqFi_NaHT17tdWNueXKbKnZertvvGWu8qnmg">
+	<link rel="icon" type="image/gif" href="">
 
 	<!-- jQuery and JS bundle w/ Popper.js -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -16,7 +15,6 @@
 	
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<script src="https://kit.fontawesome.com/4b66da8e70.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'main.css' %}">
 </head>
